apps/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-tools
spec:
  ingressClassName: jenkins
  rules:
    - host: jenkins.lab01.dev.homelab.corp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 8080
